# fscpy

./: README.md  function_to_structure_coupler.py  pyproject.toml
examples/: README.md  enigma_example.py
src/fsc/: __init__.py  core.py  streamlines.py
